# Sintax

./: LICENSE  LICENSE.txt  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml
examples/: 01_basico.stx  02_aritmetica.stx  03_condicionais.stx  05_funcoes.stx  06_listas.stx  07_dicionarios.stx  08_strings.stx  10_arquivo_json.stx  11_completo.stx  teste.stx
sintax/: __init__.py  cli.py  interpreter.py  lexer.py  parser.py
src/: interpreter.py  lexer.py  main.py  parser.py  tokens.py
src/sintax/: interpreter.py  lexer.py  main.py  parser.py  tokens.py
