[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sintax"
version = "4.0.0"
description = "Linguagem de programação em Português simples e poderosa"
readme = "README.md"
authors = [
    { name = "Rafinha", email = "Rafaelvieira123jr@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.7"

keywords = [
    "linguagem",
    "programacao",
    "portugues",
    "interpreter",
    "scripting",
    "educacao"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Interpreters",
    "Intended Audience :: Education"
]

dependencies = []

[project.urls]
Homepage = "https://github.com/xrafinha998/Sintax"
Repository = "https://github.com/xrafinha998/Sintax"

[project.scripts]
# O comando 'sintax' chamará a função 'main' dentro de 'src/sintax/main.py'
sintax = "sintax.main:main"

[tool.setuptools]
# Define que a pasta 'src' contém a raiz dos pacotes
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
# Encontra automaticamente a pasta 'sintax' dentro de 'src'
where = ["src"]
Repository = "https://github.com/xrafinha998/Sintax"

[project.scripts]
sintax = "src.main:main"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-dir]
"" = "."
