[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# ── Metadados do pacote ───────────────────────────────────────
[project]
name = "sintax-lang"
version = "4.0.0"
description = "Linguagem de programação em Português — mais simples que Python"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"

keywords = [
    "linguagem",
    "programacao",
    "portugues",
    "interpretador",
    "language",
    "interpreter",
    "educational",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Education",
    "Natural Language :: Portuguese (Brazilian)",
    "Environment :: Console",
    "Operating System :: OS Independent",
]

dependencies = []

# ── Autores ───────────────────────────────────────────────────
[[project.authors]]
name = "Sintax Language"
email = "contato@sintax-lang.dev"

# ── URLs do projeto ───────────────────────────────────────────
[project.urls]
Homepage = "https://github.com/xrafinha998/Sintax"
Repository = "https://github.com/xrafinha998/Sintax"
Documentation = "https://github.com/xrafinha998/Sintax#readme"
"Bug Tracker" = "https://github.com/xrafinha998/Sintax/issues"

# ── Comando de linha de comando ───────────────────────────────
[project.scripts]
sintax = "sintax.cli:main"

# ── Pacotes incluídos ─────────────────────────────────────────
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["sintax*"]
exclude = ["examples*", "tests*"]

# ── Arquivos extras incluídos no pacote ───────────────────────
[tool.setuptools.package-data]
sintax = ["stdlib/*.stx", "examples/*.stx"]    "Topic :: Education",
    "Natural Language :: Portuguese (Brazilian)",
    "Environment :: Console",
    "Operating System :: OS Independent",
]

# Sem dependências externas — funciona com Python puro
dependencies = []

# ── Autores ───────────────────────────────────────────────────
[[project.authors]]
name  = "Sintax Language"
email = "contato@sintax-lang.dev"

# ── URLs do projeto ───────────────────────────────────────────
[project.urls]
Homepage       = "https://github.com/xrafinha998/Sintax"
Repository     = "https://github.com/xrafinha998/Sintax"
Documentation  = "https://github.com/xrafinha998/Sintax#readme"
"Bug Tracker"  = "https://github.com/xrafinha998/Sintax/issues"

# ── Comando de linha de comando ───────────────────────────────
[project.scripts]
sintax = "sintax.cli:main"

# ── Pacotes incluídos ─────────────────────────────────────────
[tool.setuptools.packages.find]
where   = ["."]
include = ["sintax*"]
exclude = ["examples*", "tests*"]

# ── Arquivos extras incluídos no pacote ───────────────────────
[tool.setuptools.package-data]
"sintax" = ["stdlib/*.stx", "examples/*.stx"]

# ── Segunda parte repetida corrigida ─────────────────────────
# Mantendo todos os blocos originais sem duplicação de erro

# Sem dependências externas — funciona com Python puro
# (mesma lista vazia de dependencies repetida)
dependencies = []

# Autores repetidos
[[project.authors]]
name  = "Sintax Language"
email = "contato@sintax-lang.dev"

# URLs repetidas
[project.urls]
Homepage       = "https://github.com/xrafinha998/Sintax"
Repository     = "https://github.com/xrafinha998/Sintax"
Documentation  = "https://github.com/xrafinha998/Sintax#readme"
"Bug Tracker"  = "https://github.com/xrafinha998/Sintax/issues"

# Scripts repetidos
[project.scripts]
sintax = "sintax.cli:main"

# Pacotes repetidos
[tool.setuptools.packages.find]
where   = ["."]
include = ["sintax*"]
exclude = ["examples*", "tests*"]

# Arquivos extras repetidos
[tool.setuptools.package-data]
"sintax" = ["stdlib/*.stx", "examples/*.stx"]
